--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="stylesheet.css">
-  <link rel="icon" type="image/x-icon" href="favicon.png">
+  <link rel="icon" type="image/x-icon" href="img/favicon.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dental clinic</title>
@@ -14,7 +14,7 @@
 <body>
   <header>
     <div class="header-top">
-      <a href="#" class="title"><img src="siteTitle.png"></a>
+      <a href="#" class="title"><img src="img/siteTitle.png"></a>
       <div class="header-text">
         <div class="theme-text">
           "地域に根付いた歯科医院"デンタル クリニック
@@ -94,7 +94,7 @@
 
     <div class="main-contents">
       <div class="container">
-        <img src="in01.jpg" width="640px" height="280px" title="サンプル画像" class="in01">
+        <img src="img/in01.jpg" width="640px" height="280px" title="サンプル画像" class="in01">
         <div class="main-text">
           <h2 class="main-title">新着情報</h2>
           <div class="sentence">
